student login + menu working with data

--- a/src/main/resources/controller/studentMenu.fxml
+++ b/src/main/resources/controller/studentMenu.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="331.0" prefWidth="554.0" style="-fx-background-color: #feca9a;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.StudentMenuController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="414.0" prefWidth="556.0" style="-fx-background-color: #feca9a;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.StudentMenuController">
     <top>
         <AnchorPane prefHeight="95.0" prefWidth="600.0" style="-fx-background-color: #ff9a00;" BorderPane.alignment="CENTER">
             <children>
@@ -30,39 +30,44 @@
     <center>
         <AnchorPane prefHeight="232.0" prefWidth="562.0" BorderPane.alignment="CENTER">
             <children>
-                <Label layoutX="107.0" layoutY="25.0" prefHeight="41.0" prefWidth="350.0" text="Register for a course">
+                <Label layoutX="107.0" layoutY="56.0" prefHeight="41.0" prefWidth="350.0" text="Register for a course">
                     <font>
                         <Font size="18.0" />
                     </font>
                 </Label>
-                <ImageView fx:id="checkImageView1" fitHeight="48.0" fitWidth="46.0" layoutX="53.0" layoutY="25.0">
+                <ImageView fx:id="checkImageView1" fitHeight="48.0" fitWidth="46.0" layoutX="53.0" layoutY="53.0">
                     <image>
                         <Image url="@../../../../images/check.png" />
                     </image>
                 </ImageView>
-                <Label layoutX="107.0" layoutY="87.0" prefHeight="17.0" prefWidth="118.0" text="Enter course name:">
+                <Label layoutX="107.0" layoutY="101.0" prefHeight="17.0" prefWidth="118.0" text="Enter course name:">
                     <font>
                         <Font size="13.0" />
                     </font>
                 </Label>
-                <TextField fx:id="courseTextField" layoutX="228.0" layoutY="84.0" prefHeight="25.0" prefWidth="218.0" promptText="course name" />
-                <Button fx:id="registerButton" layoutX="463.0" layoutY="83.0" mnemonicParsing="false" onAction="#registerButtonOnAction" style="-fx-background-color: #ff4d00;" text="Register" textFill="WHITE">
+                <TextField fx:id="courseTextField" layoutX="228.0" layoutY="98.0" prefHeight="25.0" prefWidth="218.0" promptText="course name" />
+                <Button fx:id="registerButton" layoutX="463.0" layoutY="97.0" mnemonicParsing="false" onAction="#registerButtonOnAction" style="-fx-background-color: #ff4d00;" text="Register" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font></Button>
-            <Label layoutX="107.0" layoutY="129.0" prefHeight="41.0" prefWidth="350.0" text="See total credits">
+            <Label layoutX="107.0" layoutY="155.0" prefHeight="41.0" prefWidth="350.0" text="See total credits">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <ImageView fx:id="checkImageView2" fitHeight="48.0" fitWidth="46.0" layoutX="53.0" layoutY="129.0">
+            <ImageView fx:id="checkImageView2" fitHeight="48.0" fitWidth="46.0" layoutX="53.0" layoutY="155.0">
                <image>
                   <Image url="@../../../../images/check.png" />
                </image>
             </ImageView>
-            <Label layoutX="107.0" layoutY="177.0" prefHeight="39.0" prefWidth="77.0" text="Total credits: " />
-            <TextArea fx:id="creditsTextArea" editable="false" layoutX="184.0" layoutY="180.0" prefHeight="35.0" prefWidth="57.0" />
-            <Label fx:id="registerMessageLabel" alignment="CENTER" layoutX="227.0" layoutY="110.0" prefHeight="17.0" prefWidth="216.0" textFill="RED" />
+            <Label layoutX="107.0" layoutY="203.0" prefHeight="39.0" prefWidth="77.0" text="Total credits: " />
+            <TextArea fx:id="creditsTextArea" editable="false" layoutX="184.0" layoutY="204.0" prefHeight="35.0" prefWidth="57.0" />
+            <Label fx:id="registerMessageLabel" alignment="CENTER" layoutX="229.0" layoutY="132.0" prefHeight="38.0" prefWidth="218.0" textAlignment="CENTER" textFill="RED" />
+            <Label fx:id="studentNameLabel" layoutX="53.0" layoutY="14.0" prefHeight="27.0" prefWidth="185.0" textFill="#805e00">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
             </children>
         </AnchorPane>
     </center>
